Tue Feb 28 17:16:01 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/time.rb (Time#xmlschema): use strftime specifiers instead of
	  fractional exponential calcuation which yields undesirable
	  result.  [ruby-core:42997][Bug #6100]

Tue Feb 28 14:15:29 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/net/protocol.rb: Add OpenTimeout subclass of Timeout::Error
	* lib/net/pop.rb:  Modernize Timeout usage.  Patch by Eric Wong.
	  Use Net::OpenTimeout instead of Timeout::Error.  [Bug #5765]
	* lib/net/http.rb:  ditto
	* lib/net/smtp.rb:  ditto
	* lib/net/telnet.rb:  ditto

Tue Feb 28 13:51:12 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb:  Retry HTTP requests for additional network errors.
	  Introduce OpenTimeout subclass of Timeout::Error.  [Bug #6001]
	* test/net/http/test_http.rb:  Reduce timeout to 0.01s for faster test
	* test/net/http/test_https.rb:  ditto

Tue Feb 28 11:44:49 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (debugflags): check if -ggdb is accepted.
	  [ruby-core:42875][Bug #6080]

Tue Feb 28 10:28:51 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: default open YAML files with utf8 external
	  encoding. [ruby-core:42967]
	* test/psych/test_tainted.rb: ditto

Mon Feb 27 23:46:09 2012  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (opt_bv_decl): allow newline at the end.  [ruby-dev:45292]

Mon Feb 27 20:43:05 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_set_pos): add rdoc about textmode.

	* test/ruby/test_io.rb (TestIO#test_setpos): use binmode.

Mon Feb 27 17:00:15 2012  Akinori MUSHA  <knu@iDaemons.org>

	* string.c (rb_str_crypt): Update rdoc and state that this
	  function is system dependent.  Reviewed by nobu, thanks to
	  @takai.

Mon Feb 27 17:03:20 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (GetVpValueWithPrec): since methods
	  can be overridden, so should not make an assumption on the type